@@ -1,3 +1,11 @@
+* Dec 20 2000 hship
+
+Add the FieldLabel component, used for providing a label for validating text fields.
+ 
+* Dec 19 2000 hship
+
+Fix a typo that broke the Rollover component.
+
 * Dec 19 2000 hship
 
 Slight improvements in efficiency of the ScriptParser.
